--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_barcode_scanner: ^2.0.0
+  http: ^0.13.4
+  dio: ^4.0.6
+  flutter_launcher_icons: ^0.9.3
 
 dev_dependencies:
   flutter_test:
